--- a/1.html
+++ b/1.html
@@ -3,6 +3,7 @@
 <head>
   <title>WEB1 - HTML</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153209958-1"></script>
 <script>
@@ -15,19 +16,18 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>HTML이란 무엇인가?</h2>
-  <p><a href="https://www.w3.org/TR/2017/REC-html51-20171003/" target="_blank" title="html5">The California Consumer Privacy Act (CCPA)</a> is <strong>a <u>new</u> data privacy law</strong> that applies to certain businesses
-  <br><img src="20170821_144646_1.jpg" width="30%">
-  </p><p style="margin-top:45px;">which collect personal information from California residents. The new law goes into effect on January 1, 2020.</p>
-  <p>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/7T7r_oSp0SE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-  </p>
-
+  <div id="grid">
+    <ol>
+      <li><a href="1.html" style="color:red;text-decoration:underline">HTML</a></li>
+      <li><a href="2.html">CSS</a></li>
+      <li><a href="3.html">JavaScript</a></li>
+    </ol>
+  <div id="article">
+    <h2>HTML이란 무엇인가?</h2>
+      <p>
+        <a href="https://www.w3.org/TR/2017/REC-html51-20171003/" target="_blank" title="html5">The California Consumer Privacy Act (CCPA)</a> is <strong>a <u>new</u> data privacy law</strong> that applies to certain businesses which collect personal information from California residents. The new law goes into effect on January 1, 2020.
+      </p>
+  </div>
   <p>
     <div id="disqus_thread"></div>
     <script>
