--- a/2.html
+++ b/2.html
@@ -3,6 +3,7 @@
 <head>
   <title>WEB1 - CSS</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153209958-1"></script>
 <script>
@@ -12,18 +13,22 @@
 
   gtag('config', 'UA-153209958-1');
 </script>
+
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ol>
     <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
+    <li><a href="2.html" style="color:red;text-decoration:underline">CSS</a></li>
     <li><a href="3.html">JavaScript</a></li>
   </ol>
-  <h2>CSS</h2>
-  <p>
-    All interested parties are invited to provide implementation and bug reports and other comments through the Working Group's Github repository.
-  </p>
+  <div id="article">
+    <h2>CSS</h2>
+      <p>
+        All interested parties are invited to provide implementation and bug reports and other comments through the Working Group's Github repository.
+      </p>
+  </div>
   <p>
     <div id="disqus_thread"></div>
     <script>
