--- a/3.html
+++ b/3.html
@@ -3,6 +3,7 @@
 <head>
   <title>WEB1 - JavaScript</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153209958-1"></script>
 <script>
@@ -12,18 +13,23 @@
 
   gtag('config', 'UA-153209958-1');
 </script>
+
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
+  <div id="grid">
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
+    <li><a href="3.html" style="color:red;text-decoration:underline">JavaScript</a></li>
   </ol>
-  <h2>JavaScript</h2>
-  <p>
-    The Working Group aims to produce an HTML 5.2 Recommendation in late 2017 that would obsolete this Recommendation.
-  </p>
+    <div id="article">
+      <h2>JavaScript</h2>
+        <p>
+          The Working Group aims to produce an HTML 5.2 Recommendation in late 2017 that would obsolete this Recommendation.
+        </p>
+    </div>
+  </div>
   <p>
     <div id="disqus_thread"></div>
     <script>
