--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>WEB1 - WELCOME</title>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="style.css">
   <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-153209958-1"></script>
 <script>
@@ -16,15 +17,27 @@
 </head>
 <body>
   <h1><a href="index.html">WEB</a></h1>
-  <ol>
-    <li><a href="1.html">HTML</a></li>
-    <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JavaScript</a></li>
-  </ol>
-  <h2>WEB</h2>
-  <p>
-    This specification defines the 2nd edition of the 5th major version, first minor revision of the core language of the World Wide Web: the Hypertext Markup Language (HTML).
-  </p>
+  <div id="grid">
+    <ol>
+      <li><a href="1.html"class="saw">HTML</a></li>
+      <li><a href="2.html"class="saw">CSS</a></li>
+      <li><a href="3.html"class="saw">JavaScript</a></li>
+    </ol>
+    <!--
+    <h1><a href="index.html"><font color="red">WEB</font></a></h1>
+    <ol>
+      <li><a href="1.html"><font color="red">HTML</font></a></li>
+      <li><a href="2.html"><font color="red">CSS</font></a></li>
+      <li><a href="3.html"><font color="red">JavaScript</font></a></li>
+    </ol>
+  -->
+    <div id="article">
+      <h2>WEB</h2>
+        <p>
+          This specification defines the 2nd edition of the 5th major version, first minor revision of the core language of the World Wide Web: the Hypertext Markup Language (HTML).
+        </p>
+    </div>
+  </div>
   <p>
     <div id="disqus_thread"></div>
     <script>
