--- a/1.html
+++ b/1.html
@@ -29,6 +29,10 @@
       </p>
   </div>
   <p>
+    <style>
+      #disqus_thread {
+        text-align:center;
+      }
     <div id="disqus_thread"></div>
     <script>
 
